# noaa-data-engine

./: .gitignore  CMakeLists.txt  ipcinterface.h
cmake/: CompilerConfig.cmake  ToolChainConfig.cmake
include/noaa/: csv.h  dataengine.h  ipcinterface.h  json.h
src/: csv.cpp  dataengine.cpp  ipcinterface.cpp  json.cpp  main.cpp
